Them DataProvider link hd: https://howkteam.vn/course/lap-trinh-phan-mem-quan-ly-quan-cafe-voi-c-winform/tao-lop-dataprovider-cho-phan-mem-quan-ly-quan-cafe-voi-c-winform-1239

--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="MainScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +79,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
