--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -61,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControlTruong.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControlTruong.Designer.cs">
+      <DependentUpon>UserControlTruong.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="InsertDB.resx">
       <DependentUpon>InsertDB.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControlTruong.resx">
+      <DependentUpon>UserControlTruong.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
