--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\TruongDAO.cs" />
+    <Compile Include="DTO\Truong.cs" />
     <Compile Include="InsertDB.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,9 +100,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DTO\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Images\messi.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
