--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -67,6 +67,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControlToHopMon.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControlToHopMon.Designer.cs">
+      <DependentUpon>UserControlToHopMon.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControlTruong.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -88,6 +94,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControlToHopMon.resx">
+      <DependentUpon>UserControlToHopMon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControlTruong.resx">
       <DependentUpon>UserControlTruong.cs</DependentUpon>
     </EmbeddedResource>
