--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -46,10 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAO\CTNganhHocDAO.cs" />
+    <Compile Include="DAO\CTToHopMonDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\NganhDAO.cs" />
     <Compile Include="DAO\ToHopMonDAO.cs" />
     <Compile Include="DAO\TruongDAO.cs" />
+    <Compile Include="DTO\CTNganhHoc.cs" />
+    <Compile Include="DTO\CTToHopMon.cs" />
     <Compile Include="DTO\Nganh.cs" />
     <Compile Include="DTO\ToHopMon.cs" />
     <Compile Include="DTO\Truong.cs" />
