--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -71,6 +71,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControlDiem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControlDiem.Designer.cs">
+      <DependentUpon>UserControlDiem.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControlNganh.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -104,6 +110,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControlDiem.resx">
+      <DependentUpon>UserControlDiem.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControlNganh.resx">
       <DependentUpon>UserControlNganh.cs</DependentUpon>
     </EmbeddedResource>
