--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -81,6 +81,12 @@
     <Compile Include="MainScreen.Designer.cs">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="NganhTheoDiem.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NganhTheoDiem.Designer.cs">
+      <DependentUpon>NganhTheoDiem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControlDiem.cs">
@@ -130,6 +136,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NganhTheoDiem.resx">
+      <DependentUpon>NganhTheoDiem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
