--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -58,12 +58,20 @@
     <Compile Include="ChiTietTruong.Designer.cs">
       <DependentUpon>ChiTietTruong.cs</DependentUpon>
     </Compile>
+    <Compile Include="DangNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangNhap.Designer.cs">
+      <DependentUpon>DangNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DAO\AccountDAO.cs" />
     <Compile Include="DAO\CTNganhHocDAO.cs" />
     <Compile Include="DAO\CTToHopMonDAO.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\NganhDAO.cs" />
     <Compile Include="DAO\ToHopMonDAO.cs" />
     <Compile Include="DAO\TruongDAO.cs" />
+    <Compile Include="DTO\Account.cs" />
     <Compile Include="DTO\CTNganhHoc.cs" />
     <Compile Include="DTO\CTToHopMon.cs" />
     <Compile Include="DTO\Nganh.cs" />
@@ -130,6 +138,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ChiTietTruong.resx">
       <DependentUpon>ChiTietTruong.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DangNhap.resx">
+      <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="InsertDB.resx">
       <DependentUpon>InsertDB.cs</DependentUpon>
