--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -58,6 +58,12 @@
     <Compile Include="ChiTietTruong.Designer.cs">
       <DependentUpon>ChiTietTruong.cs</DependentUpon>
     </Compile>
+    <Compile Include="DangKy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangKy.Designer.cs">
+      <DependentUpon>DangKy.cs</DependentUpon>
+    </Compile>
     <Compile Include="DangNhap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +103,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QMK.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QMK.Designer.cs">
+      <DependentUpon>QMK.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControlDiem.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -139,6 +151,9 @@
     <EmbeddedResource Include="ChiTietTruong.resx">
       <DependentUpon>ChiTietTruong.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="DangKy.resx">
+      <DependentUpon>DangKy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DangNhap.resx">
       <DependentUpon>DangNhap.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,7 +174,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="QMK.resx">
+      <DependentUpon>QMK.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControlDiem.resx">
       <DependentUpon>UserControlDiem.cs</DependentUpon>
     </EmbeddedResource>
@@ -338,6 +357,20 @@
     <EmbeddedResource Include="Images\logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\bg_tinhdiem.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg_tinhdiem.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bg_profile.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dangnhap.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
