--- a/Final/Final.csproj
+++ b/Final/Final.csproj
@@ -390,5 +390,11 @@
   <ItemGroup>
     <None Include="Resources\dangnhap.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\back2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
